--- a/sportsman_error_prediction/recsys_test/skating_recsys.ipynb
+++ b/sportsman_error_prediction/recsys_test/skating_recsys.ipynb
@@ -46,7 +46,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "source": [
+        "!pip install scikit-surprise"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ck9rF-ocrZiY",
+        "outputId": "7df68afb-3eba-40e9-8933-5bfe3c3a9024"
+      },
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: scikit-surprise in /usr/local/lib/python3.10/dist-packages (1.1.4)\n",
+            "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.10/dist-packages (from scikit-surprise) (1.4.2)\n",
+            "Requirement already satisfied: numpy>=1.19.5 in /usr/local/lib/python3.10/dist-packages (from scikit-surprise) (1.26.4)\n",
+            "Requirement already satisfied: scipy>=1.6.0 in /usr/local/lib/python3.10/dist-packages (from scikit-surprise) (1.13.1)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 118,
       "metadata": {
         "id": "yLsTagceR8gh"
       },
@@ -89,14 +115,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 119,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
         "id": "DwN0jFysTwW-",
-        "outputId": "d8c2c05a-9dea-41a7-c913-796a92f38ae5"
+        "outputId": "c408880d-2b01-40dc-de18-8fc14adabbc4"
       },
       "outputs": [
         {
@@ -104,20 +130,20 @@
           "data": {
             "text/plain": [
               "        unit_id  bs_corrected elements\n",
-              "109994        1           3.3       2A\n",
-              "38549       344           5.3       3F\n",
-              "30163       589           4.9      3Lo\n",
-              "86098      1504           5.3       3F\n",
-              "20694       533           0.0      NaN\n",
-              "3572        353           5.3       3F\n",
-              "131389     2019           6.6      NaN\n",
-              "60518       212           2.6    CSSp3\n",
-              "38022       809           0.0      NaN\n",
-              "150849     3218           1.5   ChSpl1"
+              "64971      1074          3.50   CCoSp4\n",
+              "147248     4502          0.50      1Lo\n",
+              "47503      1047          2.64       2A\n",
+              "115427     9453          1.10       1A\n",
+              "144212       86          2.70     LSp4\n",
+              "15694       455          5.30       3F\n",
+              "4861        626          7.60       4T\n",
+              "73477      1490          2.60   FCSSp3\n",
+              "60529       211          1.94      NaN\n",
+              "61746       184          0.50       2F"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c177e898-ccc5-4dac-9a17-620dc301b471\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9b0b3897-b3df-4abd-a830-3b4a173c4e08\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -143,64 +169,64 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>109994</th>\n",
-              "      <td>1</td>\n",
-              "      <td>3.3</td>\n",
+              "      <th>64971</th>\n",
+              "      <td>1074</td>\n",
+              "      <td>3.50</td>\n",
+              "      <td>CCoSp4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>147248</th>\n",
+              "      <td>4502</td>\n",
+              "      <td>0.50</td>\n",
+              "      <td>1Lo</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>47503</th>\n",
+              "      <td>1047</td>\n",
+              "      <td>2.64</td>\n",
               "      <td>2A</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>38549</th>\n",
-              "      <td>344</td>\n",
-              "      <td>5.3</td>\n",
+              "      <th>115427</th>\n",
+              "      <td>9453</td>\n",
+              "      <td>1.10</td>\n",
+              "      <td>1A</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>144212</th>\n",
+              "      <td>86</td>\n",
+              "      <td>2.70</td>\n",
+              "      <td>LSp4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15694</th>\n",
+              "      <td>455</td>\n",
+              "      <td>5.30</td>\n",
               "      <td>3F</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>30163</th>\n",
-              "      <td>589</td>\n",
-              "      <td>4.9</td>\n",
-              "      <td>3Lo</td>\n",
+              "      <th>4861</th>\n",
+              "      <td>626</td>\n",
+              "      <td>7.60</td>\n",
+              "      <td>4T</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>86098</th>\n",
-              "      <td>1504</td>\n",
-              "      <td>5.3</td>\n",
-              "      <td>3F</td>\n",
+              "      <th>73477</th>\n",
+              "      <td>1490</td>\n",
+              "      <td>2.60</td>\n",
+              "      <td>FCSSp3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>20694</th>\n",
-              "      <td>533</td>\n",
-              "      <td>0.0</td>\n",
+              "      <th>60529</th>\n",
+              "      <td>211</td>\n",
+              "      <td>1.94</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3572</th>\n",
-              "      <td>353</td>\n",
-              "      <td>5.3</td>\n",
-              "      <td>3F</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>131389</th>\n",
-              "      <td>2019</td>\n",
-              "      <td>6.6</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>60518</th>\n",
-              "      <td>212</td>\n",
-              "      <td>2.6</td>\n",
-              "      <td>CSSp3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>38022</th>\n",
-              "      <td>809</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>150849</th>\n",
-              "      <td>3218</td>\n",
-              "      <td>1.5</td>\n",
-              "      <td>ChSpl1</td>\n",
+              "      <th>61746</th>\n",
+              "      <td>184</td>\n",
+              "      <td>0.50</td>\n",
+              "      <td>2F</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -208,7 +234,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c177e898-ccc5-4dac-9a17-620dc301b471')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9b0b3897-b3df-4abd-a830-3b4a173c4e08')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -260,12 +286,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c177e898-ccc5-4dac-9a17-620dc301b471 button.colab-df-convert');\n",
+              "        document.querySelector('#df-9b0b3897-b3df-4abd-a830-3b4a173c4e08 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c177e898-ccc5-4dac-9a17-620dc301b471');\n",
+              "        const element = document.querySelector('#df-9b0b3897-b3df-4abd-a830-3b4a173c4e08');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -285,8 +311,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-8c9d19b0-a290-473e-a9dc-af62095a4943\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8c9d19b0-a290-473e-a9dc-af62095a4943')\"\n",
+              "<div id=\"df-19c83408-759b-438a-aaac-06b0c8198405\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-19c83408-759b-438a-aaac-06b0c8198405')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -405,7 +431,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-8c9d19b0-a290-473e-a9dc-af62095a4943 button');\n",
+              "        document.querySelector('#df-19c83408-759b-438a-aaac-06b0c8198405 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -416,11 +442,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"for_recsys\",\n  \"rows\": 10,\n  \"fields\": [\n    {\n      \"column\": \"unit_id\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1004,\n        \"min\": 1,\n        \"max\": 3218,\n        \"num_unique_values\": 10,\n        \"samples\": [\n          809,\n          344,\n          353\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"bs_corrected\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2.3719658981996816,\n        \"min\": 0.0,\n        \"max\": 6.6,\n        \"num_unique_values\": 7,\n        \"samples\": [\n          3.3,\n          5.3,\n          2.6\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"elements\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 5,\n        \"samples\": [\n          \"3F\",\n          \"ChSpl1\",\n          \"3Lo\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"for_recsys\",\n  \"rows\": 10,\n  \"fields\": [\n    {\n      \"column\": \"unit_id\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2947,\n        \"min\": 86,\n        \"max\": 9453,\n        \"num_unique_values\": 10,\n        \"samples\": [\n          211,\n          4502,\n          455\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"bs_corrected\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2.2123582189349196,\n        \"min\": 0.5,\n        \"max\": 7.6,\n        \"num_unique_values\": 9,\n        \"samples\": [\n          2.6,\n          0.5,\n          5.3\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"elements\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 9,\n        \"samples\": [\n          \"FCSSp3\",\n          \"1Lo\",\n          \"3F\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 90
+          "execution_count": 119
         }
       ],
       "source": [
@@ -432,13 +458,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 120,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4Beuk9H7VBky",
-        "outputId": "de6f9e66-1199-4938-f17f-22b40dd3a6d4"
+        "outputId": "1b630326-d4d7-4095-b2a6-9658dfb64e89"
       },
       "outputs": [
         {
@@ -483,7 +509,7 @@
       "metadata": {
         "id": "PetcwhHw8-99"
       },
-      "execution_count": 92,
+      "execution_count": 121,
       "outputs": []
     },
     {
@@ -497,9 +523,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OzNfogwsimDC",
-        "outputId": "f021347e-2ac3-4d64-ed2e-c8c5c7fe5d43"
+        "outputId": "bffbbf02-ffd1-44bf-8e04-5640c744ac5b"
       },
-      "execution_count": 93,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -509,7 +535,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 93
+          "execution_count": 122
         }
       ]
     },
@@ -520,10 +546,26 @@
         "for_recsys.drop_duplicates(subset=['unit_id', 'elements'], inplace=True)"
       ],
       "metadata": {
-        "id": "_WdpAitIi3lz"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_WdpAitIi3lz",
+        "outputId": "69fe7a10-e4ee-4c41-d122-936cbdb81467"
       },
-      "execution_count": 94,
-      "outputs": []
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-123-406590c93e68>:2: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  for_recsys.drop_duplicates(subset=['unit_id', 'elements'], inplace=True)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -534,7 +576,7 @@
       "metadata": {
         "id": "LeFEiiHYkwTU"
       },
-      "execution_count": 95,
+      "execution_count": 124,
       "outputs": []
     },
     {
@@ -558,9 +600,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1l_3uYQhj6FU",
-        "outputId": "c806aa54-e7c7-487e-b761-41053494f6d1"
+        "outputId": "ad7dd713-cc75-463d-c1b8-c26757c4c9b3"
       },
-      "execution_count": 96,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -570,7 +612,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 96
+          "execution_count": 125
         }
       ]
     },
@@ -586,7 +628,7 @@
       "metadata": {
         "id": "YEMPfW4hmHFV"
       },
-      "execution_count": 97,
+      "execution_count": 126,
       "outputs": []
     },
     {
@@ -597,7 +639,7 @@
       "metadata": {
         "id": "VpnmX_DFnB5P"
       },
-      "execution_count": 98,
+      "execution_count": 127,
       "outputs": []
     },
     {
@@ -611,7 +653,7 @@
       "metadata": {
         "id": "Z8EGoGRgnGUG"
       },
-      "execution_count": 99,
+      "execution_count": 128,
       "outputs": []
     },
     {
@@ -649,7 +691,7 @@
       "metadata": {
         "id": "GHSR7g-mo7m6"
       },
-      "execution_count": 100,
+      "execution_count": 129,
       "outputs": []
     },
     {
@@ -661,7 +703,7 @@
       "metadata": {
         "id": "lwtmMra4hQQp"
       },
-      "execution_count": 101,
+      "execution_count": 130,
       "outputs": []
     },
     {
@@ -683,29 +725,29 @@
       "metadata": {
         "id": "n2m7y0OwwNIz"
       },
-      "execution_count": 102,
+      "execution_count": 131,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "recom_list = get_recommendations_for_unit(111)\n",
-        "print(recom_list)"
+        "print(f'Рекомендуется добавить элементы {recom_list}')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qpbtUbtWxvfb",
-        "outputId": "d51eb1dc-eb55-44cd-b90c-ed5df194d1b9"
+        "outputId": "7b358d18-31c9-41ba-92bc-72329c003eee"
       },
-      "execution_count": 103,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['2A', 'FSSp4', 'CCoSp3', 'LSp4', 'FSSp3', 'FSSp1', 'StSq1']\n"
+            "Рекомендуется добавить элементы ['CCoSp3', 'FSSp4', '2A', 'LSp4', 'FSSp3', 'FSSp1', 'StSq1']\n"
           ]
         }
       ]
@@ -1871,15 +1913,6 @@
       "metadata": {
         "id": "SLKUoXXo2Xaz"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "WHNLxfY1aNaL"
-      },
-      "execution_count": 113,
-      "outputs": []
     }
   ],
   "metadata": {
